@@ -1,0 +1,9 @@
+Title: EC: reorder entries in Performance snapin, add overflows and load
+Level: 1
+Component: ec
+Compatible: compat
+Version: 1.4.0i3
+Date: 1481716724
+Class: feature
+
+
